fix: few misc layout issues

--- a/assets/styles/theme/events.scss
+++ b/assets/styles/theme/events.scss
@@ -114,7 +114,8 @@ main ul.events {
     }
   }
 
-  #home-more-events {
+  #home-more-events,
+  #home-recent-events {
     padding: 0.5rem;
   }
 }
